Fixed text wrap issue in vault tree view

--- a/web/src/css/base/vault.css
+++ b/web/src/css/base/vault.css
@@ -54,3 +54,7 @@
 #trvVaultTreeView button {
     zoom: 1.25;
 }
+
+#trvVaultTreeView .treenode-title {
+    white-space: nowrap;
+}
